<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".features.resultData.ResultActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/encourage"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/percentage_temporal_number"
        android:textSize="50sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="50dp"
        android:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/calculate_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:paddingBottom="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/percentage_symbol"
        android:textSize="25sp"
        android:layout_alignBaseline="@+id/percentage"
        android:layout_alignBottom="@+id/percentage"
        android:layout_toRightOf="@+id/percentage"
        android:layout_toEndOf="@+id/percentage"/>

    <EditText
        android:id="@+id/new_topics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/recalculate"
        android:layout_centerHorizontal="true"
        android:hint="@string/studied"
        android:inputType="number"
        android:imeOptions="actionGo"/>

    <Button
        android:id="@+id/recalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>

</RelativeLayout>
